logo-ipsum: header & hero section

--- a/index.html
+++ b/index.html
@@ -4,15 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&family=Mulish&family=Poppins:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/main.css">
     <title>About Us</title>
 </head>
 <body>
-<header class="header">
-    <div class="container header-container">
-        
-    </div>
-</header>
-</body>
-</html>
+    <header class="header">
+        <div class="container header-container">
+            <a href="index.html">
+                <img src="./images/logo.svg" alt="logo">
+            </a>
+            <nav class="nav">
+                <ul class="header-menyu">
+                    <li class="header-list">
+                        <a  class="header-link" href="#">Home</a>
+                    </li>
+                    <li class="header-list">
+                        <a  class="header-link" href="#">Features</a>
+                    </li>
+                    <li class="header-list">
+                        <a  class="header-link" href="#">Pricing</a>
+                    </li>
+                    <li class="header-list">
+                        <a  class="header-link" href="#">Blog</a>
+                    </li>
+                </ul>
+                <button class="header-btn">Get Started</button>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <section class="hero">
+            <div class="container hero-container">
+                <div class="hero-tekst">
+                    <h1 class="text1">Grow your
+                        subscription
+                        business</h1>
+                        <p class="text2" >Outcome-centered products that reduce churn, optimize pricing, and grow your subscription business end-to-end.</p>
+                        <div class="hero-btn-img">
+                        <button class="hero-btn">Get Started</button>
+                        <img  class="hero-img" src="./images/Down.png">
+                      </div>
+                    </div>
+                    <img  class="pose" src="./images/pose_7.png">
+                </div>
+            </section>
+        </main>
+    </body>
+    </html>
